@startuml
class UserInputEndpoint <<InputEndpoint>>
class UserInputInterpreter <<PureFunction>>
class WrapOutput <<PureFunction>>
class CommandLineOutputEndpoint <<OutputEndpoint>>

UserInputEndpoint --> UserInput
UserInput --> UserInputInterpreter
UserInputInterpreter --> UnknownCommand
UnknownCommand --> WrapOutput
UserInputInterpreter --> QuitCommand
QuitCommand --> WrapOutput
WrapOutput --> WrappedOutput
WrappedOutput --> CommandLineOutputEndpoint
@enduml